r/m unused code and backticks